src/gui/painting/qrasterizer.cpp
@@ -755,10 +755,8 @@ static inline int qSafeFloatToQ16Dot16(qreal x)
 
 void QRasterizer::rasterizeLine(const QPointF &a, const QPointF &b, qreal width, bool squareCap)
 {
-    if (a == b || width == 0 || d->clipRect.isEmpty())
+    if (a == b || !(width > 0.0) || d->clipRect.isEmpty())
         return;
-
-    Q_ASSERT(width > 0.0);
 
     QPointF pa = a;
     QPointF pb = b;
